--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,29 @@
     <link rel="stylesheet" href="style.css">
     <title>Ohmyfood</title>
 </head>
+
 <body>
-    <h1>Ohmyfood</h1>
+    <header>
+        <img src="logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+    </header>
+
+
+    <footer>
+        <img src="logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+
+        <div class="element-logo">
+
+        </div>
+
+        <div class="element-logo">
+
+        </div>
+
+        <h1>Mentions légales</h1>
+        <h1>Contact</h1>
+
+    </footer>
+
 </body>
+
 </html>
