--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         <img src="logo/ohmyfood@2x.svg" alt="logo ohmyfood">
 
         <div class="element-logo">
-
+            <img src="logo/store-solid.svg" alt="logo_store">
+            <h2>Proposer un restaurant</h2>
         </div>
 
         <div class="element-logo">
+            <img src="logo/hands-helping-solid.svg" alt="logo_handshake">
+            <h2>Devenir partenaire</h2>
 
         </div>
 
