ajout de la section fonctionnement et de plusieurs logos

--- a/index.html
+++ b/index.html
@@ -11,12 +11,40 @@
 
 <body>
     <header>
-        <img src="logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood">
+        <div class="location">
+            <img src="logo/map-marker-alt-solid.svg" alt="logo_map_marker" class="logo_map_marker">
+            <h1>Paris, Belleville</h1>
+        </div>
+
+        <div class="presentation">
+            <h1>Réservez le menu qui vous convient</h1>
+            <h2>Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
+            <div class="btn">
+                <h1>Explorer nos restaurants</h1>
+            </div>
+        </div>
     </header>
 
+    <section class="fonctionnement">
+        <h1>Fonctionnement</h1>
+        <div class="choix">
+            <img src="logo/mobile-alt-solid.svg" alt="logo_mobile" class="logo_fonctionnement">
+            <h1>Choisissez un restaurant</h1>
+        </div>
+        <div class="composer">
+            <img src="logo/list-ul-solid.svg" alt="logo_liste" class="logo_fonctionnement">
+            <h1>Composez votre menu</h1>
+        </div>
+        <div class="deguster">
+            <img src="logo/store-solid.svg" alt="logo_restaurant" class="logo_fonctionnement">
+            <h1>dégustez au restaurant</h1>
+        </div>
+
+    </section>
 
     <footer>
-        <img src="logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood" id="logo-footer">
 
         <div class="element-logo">
             <img src="logo/store-solid.svg" alt="logo_store">
