--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood" id="logo-footer">
 
         <div class="element-logo">
-            <img src="logo/store-solid.svg" alt="logo_store">
+            <img src="logo/utensils-solid.svg" alt="logo_store">
             <h2>Proposer un restaurant</h2>
         </div>
 
