--- a/index.html
+++ b/index.html
@@ -27,18 +27,49 @@
     </header>
 
     <section class="fonctionnement">
-        <h1>Fonctionnement</h1>
+        <h2>Fonctionnement</h2>
         <div class="choix">
             <img src="logo/mobile-alt-solid.svg" alt="logo_mobile" class="logo_fonctionnement">
-            <h1>Choisissez un restaurant</h1>
+            <h3>Choisissez un restaurant</h3>
         </div>
         <div class="composer">
             <img src="logo/list-ul-solid.svg" alt="logo_liste" class="logo_fonctionnement">
-            <h1>Composez votre menu</h1>
+            <h3>Composez votre menu</h3>
         </div>
         <div class="deguster">
             <img src="logo/store-solid.svg" alt="logo_restaurant" class="logo_fonctionnement">
-            <h1>dégustez au restaurant</h1>
+            <h3>dégustez au restaurant</h3>
+        </div>
+
+    </section>
+
+    <section class="restaurants">
+        <h2>Restaurants</h2>
+
+        (<div class="carte_resto">
+            <div class="photo_icone"><img src="" alt=""><img src="" alt=""></div>
+            <div class="nom_resto_icone_like">
+                <div class="nom_resto">
+                    <h2></h2>
+                    <h3></h3>
+                </div>
+                <div class="icone_like"><img src="" alt=""></div>
+                <div class="nom_resto">
+                    <h2></h2>
+                    <h3></h3>
+                </div>
+                <div class="icone_like"><img src="" alt=""></div>
+                <div class="nom_resto">
+                    <h2></h2>
+                    <h3></h3>
+                </div>
+                <div class="icone_like"><img src="" alt=""></div>
+                <div class="nom_resto">
+                    <h2></h2>
+                    <h3></h3>
+                </div>
+                <div class="icone_like"><img src="" alt=""></div>
+            </div>
         </div>
 
     </section>
