retrait parenthèse en trop dans html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="restaurants">
         <h2>Restaurants</h2>
 
-        (<div class="carte_resto">
+        <div class="carte_resto">
             <div class="photo_icone"><img src="" alt=""><img src="" alt=""></div>
             <div class="nom_resto_icone_like">
                 <div class="nom_resto">
