--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>Choisissez un restaurant</h3>
         </div>
         <div class="composer">
-            <img src="logo/list-ul-solid.svg" alt="logo_liste" class="logo_fonctionnement">
+            <img src="logo/listq-ul-solid.svg" alt="logo_liste" class="logo_fonctionnement">
             <h3>Composez votre menu</h3>
         </div>
         <div class="deguster">
@@ -46,29 +46,19 @@
     <section class="restaurants">
         <h2>Restaurants</h2>
 
+
         <div class="carte_resto">
-            <div class="photo_icone"><img src="" alt=""><img src="" alt=""></div>
-            <div class="nom_resto_icone_like">
-                <div class="nom_resto">
+            <div class="images_icone_nouveau"><img src="" alt=""><img src="" alt=""></div>
+            <div class="titre_icone">
+                <div class="titre_lieu">
                     <h2></h2>
                     <h3></h3>
                 </div>
-                <div class="icone_like"><img src="" alt=""></div>
-                <div class="nom_resto">
-                    <h2></h2>
-                    <h3></h3>
+                <div class="icone_like">
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
                 </div>
-                <div class="icone_like"><img src="" alt=""></div>
-                <div class="nom_resto">
-                    <h2></h2>
-                    <h3></h3>
-                </div>
-                <div class="icone_like"><img src="" alt=""></div>
-                <div class="nom_resto">
-                    <h2></h2>
-                    <h3></h3>
-                </div>
-                <div class="icone_like"><img src="" alt=""></div>
             </div>
         </div>
 
