--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>Choisissez un restaurant</h3>
         </div>
         <div class="composer">
-            <img src="logo/listq-ul-solid.svg" alt="logo_liste" class="logo_fonctionnement">
+            <img src="logo/list-ul-solid.svg" alt="logo_liste" class="logo_fonctionnement">
             <h3>Composez votre menu</h3>
         </div>
         <div class="deguster">
