--- a/index.html
+++ b/index.html
@@ -48,11 +48,71 @@
 
 
         <div class="carte_resto">
-            <div class="images_icone_nouveau"><img src="" alt=""><img src="" alt=""></div>
+            <div class="images_icone_nouveau">
+                <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="photo_resto">
+                <img src="" alt="">
+            </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
-                    <h2></h2>
-                    <h3></h3>
+                    <h2>La palette du goût</h2>
+                    <h3>Ménilmontant</h3>
+                </div>
+                <div class="icone_like">
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="carte_resto">
+            <div class="images_icone_nouveau">
+                <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="photo_resto">
+                <img src="" alt="">
+            </div>
+            <div class="titre_icone">
+                <div class="titre_lieu">
+                    <h2>La note enchantée</h2>
+                    <h3>Charonne</h3>
+                </div>
+                <div class="icone_like">
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="carte_resto">
+            <div class="images_icone_nouveau">
+                <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="photo_resto">
+                <img src="" alt="">
+            </div>
+            <div class="titre_icone">
+                <div class="titre_lieu">
+                    <h2>À la française</h2>
+                    <h3>Cité Rouge</h3>
+                </div>
+                <div class="icone_like">
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="carte_resto">
+            <div class="images_icone_nouveau">
+                <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="photo_resto">
+                <img src="" alt="">
+            </div>
+            <div class="titre_icone">
+                <div class="titre_lieu">
+                    <h2>Le délice des sens</h2>
+                    <h3>Folie-Méricourt</h3>
                 </div>
                 <div class="icone_like">
                     <a href="">
