couleur logos footer, background

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </section>
 
     <footer>
-        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood" id="logo-footer">
+        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood">
 
         <div class="element-logo">
             <img src="logo/utensils-solid.svg" alt="logo_store">
@@ -138,8 +138,8 @@
 
         </div>
 
-        <h1>Mentions légales</h1>
-        <h1>Contact</h1>
+        <h2>Mentions légales</h2>
+        <h2>Contact</h2>
 
     </footer>
 
