--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood">
+        <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
         <div class="location">
             <img src="logo/map-marker-alt-solid.svg" alt="logo_map_marker" class="logo_map_marker">
             <h1>Paris, Belleville</h1>
@@ -125,7 +125,7 @@
     </section>
 
     <footer>
-        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood" id="logo-footer">
+        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood-footer" id="logo-footer">
 
         <div class="element-logo">
             <img src="logo/utensils-solid.svg" alt="logo_store">
