--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <header>
-        <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
+        <div class="title">
+            <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
+        </div>
         <div class="location">
             <img src="logo/map-marker-alt-solid.svg" alt="logo_map_marker" class="logo_map_marker">
             <h1>Paris, Belleville</h1>
