ajout lien acceuil dans logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="title">
-            <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
+            <a href="index.html"><img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header"></a>
         </div>
         <div class="location">
             <img src="logo/map-marker-alt-solid.svg" alt="logo_map_marker" class="logo_map_marker">
