ajout lien explorer nos restaurants vers restaurants

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <h1>Réservez le menu qui vous convient</h1>
             <h2>Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
             <div class="btn">
-                <h1>Explorer nos restaurants</h1>
+                <a href="#restaurants">
+                    <h1>Explorer nos restaurants</h1>
+                </a>
             </div>
         </div>
     </header>
@@ -45,7 +47,7 @@
 
     </section>
 
-    <section class="restaurants">
+    <section class="restaurants" id="restaurants">
         <h2>Restaurants</h2>
 
 
