--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
             <div class="btn">
                 <a href="#restaurants">
-                    <h1>Explorer nos restaurants</h1>
+                    <button id="button_explore">Explorer nos restaurants</button>
                 </a>
             </div>
         </div>
