--- a/Restaurants/restaurant_1.html
+++ b/Restaurants/restaurant_1.html
@@ -11,7 +11,23 @@
 
 <body>
     <header>
-        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood">
+        <div class="title">
+            <a href="index.html"><img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header"></a>
+        </div>
+        <div class="location">
+            <img src="logo/map-marker-alt-solid.svg" alt="logo_map_marker" class="logo_map_marker">
+            <h1>Paris, Belleville</h1>
+        </div>
+
+        <div class="presentation">
+            <h1>Réservez le menu qui vous convient</h1>
+            <h2>Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
+            <div class="btn">
+                <a href="#restaurants">
+                    <button id="button_explore">Explorer nos restaurants</button>
+                </a>
+            </div>
+        </div>
     </header>
 
 
