changement padding header and location

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <div class="title">
             <a href="index.html"><img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header"></a>
         </div>
+
+    </header>
+
+    <section class="accueil">
+
         <div class="location">
             <img src="logo/map-marker-alt-solid.svg" alt="logo_map_marker" class="logo_map_marker">
             <h1>Paris, Belleville</h1>
@@ -28,7 +33,8 @@
                 </a>
             </div>
         </div>
-    </header>
+
+    </section>
 
     <section class="fonctionnement">
         <h2>Fonctionnement</h2>
