--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <div class="title">
             <a href="index.html"><img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header"></a>
         </div>
-
     </header>
 
     <section class="accueil">
@@ -27,11 +26,13 @@
         <div class="presentation">
             <h1>Réservez le menu qui vous convient</h1>
             <h2>Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
-            <div class="btn">
-                <a href="#restaurants">
-                    <button id="button_explore">Explorer nos restaurants</button>
-                </a>
-            </div>
+
+                <div  id="button_explore">
+                    <button>
+                        <a href="#restaurants">Explorer nos restaurants</a>
+                    </button>
+                </div>
+
         </div>
 
     </section>
