--- a/index.html
+++ b/index.html
@@ -40,14 +40,23 @@
     <section class="fonctionnement">
         <h2>Fonctionnement</h2>
         <div class="choix">
+            <div class="icon_number">
+                <p>1</p>
+            </div>
             <img src="logo/mobile-alt-solid.svg" alt="logo_mobile" class="logo_fonctionnement">
             <h3>Choisissez un restaurant</h3>
         </div>
         <div class="composer">
+            <div class="icon_number">
+                <p>2</p>
+            </div>
             <img src="logo/list-ul-solid.svg" alt="logo_liste" class="logo_fonctionnement">
             <h3>Composez votre menu</h3>
         </div>
         <div class="deguster">
+            <div class="icon_number">
+                <p>3</p>
+            </div>
             <img src="logo/store-solid.svg" alt="logo_restaurant" class="logo_fonctionnement">
             <h3>dégustez au restaurant</h3>
         </div>
