--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="photo_resto">
-                <img src="" alt="">
+                <div class="nouveau">
+                    <p>Nouveau</p>
+                </div>
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
@@ -89,7 +91,9 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="photo_resto">
-                <img src="" alt="">
+                <div class="nouveau">
+                    <p>Nouveau</p>
+                </div>
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
@@ -108,7 +112,9 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="photo_resto">
-                <img src="" alt="">
+                <div class="nouveau">
+                    <p>Nouveau</p>
+                </div>
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
@@ -127,7 +133,9 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="photo_resto">
-                <img src="" alt="">
+                <div class="nouveau">
+                    <p>Nouveau</p>
+                </div>
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
