ajustement photos avec iicone nouveau

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="photo_resto">
-                <div class="nouveau">
+                <!-- <div class="nouveau">
                     <p>Nouveau</p>
-                </div>
+                </div> -->
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
@@ -133,9 +133,9 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="photo_resto">
-                <div class="nouveau">
+                <!-- <div class="nouveau">
                     <p>Nouveau</p>
-                </div>
+                </div> -->
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
