arangement cartes et édition font weight nouveau

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <h3>Ménilmontant</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="">
-                        <img src="" alt="">
+                    <a href="restaurant_1.html">
+                        <img src="logo/heart-regular.svg" alt="coeur vide">
                     </a>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="icone_like">
                     <a href="">
-                        <img src="" alt="">
+                        <img src="logo/heart-regular.svg" alt="">
                     </a>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="icone_like">
                     <a href="">
-                        <img src="" alt="">
+                        <img src="logo/heart-regular.svg" alt="">
                     </a>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="icone_like">
                     <a href="">
-                        <img src="" alt="">
+                        <img src="logo/heart-regular.svg" alt="">
                     </a>
                 </div>
             </div>
