--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="photo_resto">
-                <div class="nouveau">
+                <div class="nouveau" id="nouveau_1">
                     <p>Nouveau</p>
                 </div>
             </div>
+
 
 
             
@@ -112,7 +113,7 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="photo_resto">
-                <div class="nouveau">
+                <div class="nouveau" id="nouveau_2">
                     <p>Nouveau</p>
                 </div>
             </div>
@@ -151,9 +152,9 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="photo_resto">
-                <!-- <div class="nouveau">
+                <div class="nouveau" id="nouveau_3">
                     <p>Nouveau</p>
-                </div> -->
+                </div>
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
@@ -190,9 +191,9 @@
         <div class="carte_resto">
             <div class="images_icone_nouveau">
                 <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="photo_resto">
-                <!-- <div class="nouveau">
+                <div class="nouveau" id="nouveau_4">
                     <p>Nouveau</p>
-                </div> -->
+                </div>
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
