--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="presentation">
             <h1>Réservez le menu qui vous convient</h1>
-            <h2>Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
+            <h2 id="sous_titre_decouvrez">Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
 
             <div id="button_explore">
                 <button>
@@ -77,7 +77,7 @@
 
 
 
-            
+
             <div class="titre_icone">
                 <div class="titre_lieu">
                     <h2>La palette du goût</h2>
