--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <div class="loader"></div> 
         <div class="title">
             <a href="index.html"><img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header"></a>
         </div>
@@ -84,7 +85,7 @@
                     <h3>Ménilmontant</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="">
+                    <a href="restaurant_1.html">
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
                             class="heart_regular" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
@@ -123,7 +124,7 @@
                     <h3>Charonne</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="">
+                    <a href="restaurant_2.html">
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
                             class="heart_regular" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
@@ -162,7 +163,7 @@
                     <h3>Cité Rouge</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="">
+                    <a href="restaurant_3.html">
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
                             class="heart_regular" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
@@ -201,7 +202,7 @@
                     <h3>Folie-Méricourt</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="">
+                    <a href="restaurant_4.html">
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
                             class="heart_regular" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
