setup lien fleche dans 4 restos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="loader"></div> 
+        <!-- <div class="loader"></div>  -->
         <div class="title">
             <a href="index.html"><img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header"></a>
         </div>
