--- a/restaurant_3.html
+++ b/restaurant_3.html
@@ -11,8 +11,11 @@
 
 <body>
     <header>
-        <div class="title">
-            <a href="index.html"><img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header"></a>
+        <div class="title_resto">
+            <a href="index.html">
+                <img src="logo/arrow-left-solid.svg" alt="fleche">
+            </a>
+            <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
         </div>
     </header>
 
