remove link from title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <!-- <div class="loader"></div>  -->
         <div class="title">
-            <a href="index.html"><img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header"></a>
+            <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
         </div>
     </header>
 
