transformer titre resto en lien, transformer lien coeur en btn

--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
 
             <div class="titre_icone">
                 <div class="titre_lieu">
-                    <h2>La palette du goût</h2>
+                    <a href="restaurant_1.html">
+                        <h2>La palette du goût</h2>
+                    </a>
                     <h3>Ménilmontant</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="restaurant_1.html">
+                    <btn>
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
                             class="heart_regular" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
@@ -105,7 +107,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                    </a>
+                    </btn>
                 </div>
             </div>
         </div>
@@ -120,11 +122,13 @@
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
-                    <h2>La note enchantée</h2>
+                    <a href="restaurant_2.html">
+                        <h2>La note enchantée</h2>
+                    </a>
                     <h3>Charonne</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="restaurant_2.html">
+                    <btn>
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
                             class="heart_regular" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
@@ -144,7 +148,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                    </a>
+                    </btn>
                 </div>
             </div>
         </div>
@@ -159,11 +163,13 @@
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
-                    <h2>À la française</h2>
+                    <a href="restaurant_3.html">
+                        <h2>À la française</h2>
+                    </a>
                     <h3>Cité Rouge</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="restaurant_3.html">
+                    <btn>
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
                             class="heart_regular" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
@@ -183,7 +189,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                    </a>
+                    </btn>
                 </div>
             </div>
         </div>
@@ -198,11 +204,13 @@
             </div>
             <div class="titre_icone">
                 <div class="titre_lieu">
-                    <h2>Le délice des sens</h2>
+                    <a href="restaurant_4.html">
+                        <h2>Le délice des sens</h2>
+                    </a>
                     <h3>Folie-Méricourt</h3>
                 </div>
                 <div class="icone_like">
-                    <a href="restaurant_4.html">
+                    <btn>
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
                             class="heart_regular" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
@@ -222,7 +230,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                    </a>
+                    </btn>
                 </div>
             </div>
         </div>
