--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="all.css">
     <title>Ohmyfood</title>
 </head>
 
+
+<!-- <div class="container"> -->
+    <!-- <div class="loader"></div> -->
+</div>
 <body>
     <header>
-        <!-- <div class="loader"></div>  -->
+        
         <div class="title">
             <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
         </div>
@@ -107,6 +112,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
+                        <!-- <i class="far fa-heart"></i> -->
                     </btn>
                 </div>
             </div>
