--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 
 
-<!-- <div class="container"> -->
-    <!-- <div class="loader"></div> -->
+<div class="container">
+    <div class="loader"></div>
 </div>
+
+
 <body>
     <header>
         
