--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         <div class="carte_resto">
             <div class="images_icone_nouveau">
-                <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="photo_resto">
+                <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="photo_resto">
                 <div class="nouveau" id="nouveau_2">
                     <p>Nouveau</p>
                 </div>
