--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -19,6 +19,10 @@
         </div>
     </header>
 
+    <section class="content">
+        <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="photo_resto">
+    </section>
+
 
     <footer>
         <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood" id="logo-footer">
