--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -20,15 +20,15 @@
     </header>
 
     <section class="content">
-        <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="photo_resto_menu">
+        <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="photo_resto_menu">
 
 
         <div class="menu">
             <div class="carte_resto">
                 <div class="titre_icone">
                     <div class="titre_lieu">
-                        <a href="restaurant_2.html">
-                            <h2>La note enchantée</h2>
+                        <a href="restaurant_1.html">
+                            <h2>La palette du goût</h2>
                         </a>
                     </div>
                     <div class="icone_like">
