ajout elements menu

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -31,6 +31,7 @@
                             <h2>La palette du goût</h2>
                         </a>
                     </div>
+
                     <div class="icone_like">
                         <btn>
                             <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" fill="black"
@@ -56,6 +57,28 @@
                             </svg>
                         </btn>
                     </div>
+
+                    
+                </div>
+                <div class="categories_food">
+                    <div class="entrees">
+                        <h3>ENTRÉES</h3>
+                        <div class="entree_element"></div>
+                        <div class="entree_element"></div>
+                        <div class="entree_element"></div>
+                    </div>
+                    <div class="plats">
+                        <h3>PLATS</h3>
+                        <div class="plats_element"></div>
+                        <div class="plats_element"></div>
+                        <div class="plats_element"></div>
+                    </div>
+                    <desserts>
+                        <h3>DESSERTS</h3>
+                        <div class="desserts_element"></div>
+                        <div class="desserts_element"></div>
+                        <div class="desserts_element"></div>
+                    </desserts>
                 </div>
             </div>
         </div>
