--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -28,7 +28,7 @@
                 <div class="titre_icone">
                     <div class="titre_lieu">
                         <a href="restaurant_1.html">
-                            <h2>La palette du goût</h2>
+                            <h2 class="titre resto_menu">La palette du goût</h2>
                         </a>
                     </div>
 
@@ -75,13 +75,13 @@
                         <div class="plats_element"></div>
                         <div class="plats_element"></div>
                     </div>
-                    <desserts>
-                        <h3>DESSERTS</h3>
-                        <hr/>
-                        <div class="desserts_element"></div>
-                        <div class="desserts_element"></div>
-                        <div class="desserts_element"></div>
-                    </desserts>
+                        <div class="desserts">
+                            <h3>DESSERTS</h3>
+                            <hr/>
+                            <div class="desserts_element"></div>
+                            <div class="desserts_element"></div>
+                            <div class="desserts_element"></div>
+                        </div>
                 </div>
             </div>
         </div>
