--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -64,23 +64,23 @@
                     <div class="entrees">
                         <h3>ENTRÉES</h3>
                         <hr/>
-                        <div class="entree_element"></div>
-                        <div class="entree_element"></div>
-                        <div class="entree_element"></div>
+                        <button class="entree_element"></button>
+                        <button class="entree_element"></button>
+                        <button class="entree_element"></button>
                     </div>
                     <div class="plats">
                         <h3>PLATS</h3>
                         <hr/>
-                        <div class="plats_element"></div>
-                        <div class="plats_element"></div>
-                        <div class="plats_element"></div>
+                        <button class="plats_element"></button>
+                        <button class="plats_element"></button>
+                        <button class="plats_element"></button>
                     </div>
                         <div class="desserts">
                             <h3>DESSERTS</h3>
                             <hr/>
-                            <div class="desserts_element"></div>
-                            <div class="desserts_element"></div>
-                            <div class="desserts_element"></div>
+                            <button class="desserts_element"></button>
+                            <button class="desserts_element"></button>
+                            <button class="desserts_element"></button>
                         </div>
                 </div>
             </div>
