--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -58,30 +58,56 @@
                         </btn>
                     </div>
 
-                    
+
                 </div>
                 <div class="categories_food">
                     <div class="entrees">
                         <h3>ENTRÉES</h3>
-                        <hr/>
-                        <button class="entree_element"></button>
-                        <button class="entree_element"></button>
-                        <button class="entree_element"></button>
+                        <hr />
+                        <button class="entree_element">
+                            <div class="titre_element">
+                                <h2>Fricassée d'escargot</h2>
+                                <h3>Au piment d'espelette</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>25€</h3>
+                            </div>
+
+
+                        </button>
+                        <button class="entree_element">
+                            <div class="titre_element">
+                                <h2>fois gras de canard mi-cuit</h2>
+                                <h3>et ses copeaux de truffe noire</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>35€</h3>
+                            </div>
+                        </button>
+                        <button class="entree_element">
+                            <div class="titre_element">
+                                <h2>Oeuf au plat</h2>
+                                <h3>Assaisonné à la truffe sur lit de caviar</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>20€</h3>
+                            </div>
+                        </button>
                     </div>
                     <div class="plats">
                         <h3>PLATS</h3>
-                        <hr/>
+                        <hr />
                         <button class="plats_element"></button>
                         <button class="plats_element"></button>
                         <button class="plats_element"></button>
                     </div>
-                        <div class="desserts">
-                            <h3>DESSERTS</h3>
-                            <hr/>
-                            <button class="desserts_element"></button>
-                            <button class="desserts_element"></button>
-                            <button class="desserts_element"></button>
-                        </div>
+                    <div class="desserts">
+                        <h3>DESSERTS</h3>
+                        <hr />
+                        <button class="desserts_element"></button>
+                        <button class="desserts_element"></button>
+                        <button class="desserts_element"></button>
+                    </div>
                 </div>
             </div>
         </div>
