remplissage texte boutons, ajout ombre hover

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -94,19 +94,71 @@
                             </div>
                         </button>
                     </div>
-                    <div class="plats">
+                    <div class="entrees">
                         <h3>PLATS</h3>
                         <hr />
-                        <button class="plats_element"></button>
-                        <button class="plats_element"></button>
-                        <button class="plats_element"></button>
+                        <button class="plats_element">
+                            <div class="titre_element">
+                                <h2>Filet de boeuf aux herbes</h2>
+                                <h3>Accompagné de sa ribambelle de légumes</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>40€</h3>
+                            </div>
+
+
+                        </button>
+                        <button class="plats_element">
+                            <div class="titre_element">
+                                <h2>Parmentier de queue de boeuf</h2>
+                                <h3>À la truffe noire sur sa purée de panais</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>35€</h3>
+                            </div>
+                        </button>
+                        <button class="plats_element">
+                            <div class="titre_element">
+                                <h2>Filet de turbot</h2>
+                                <h3>Aux agrumes</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>44€</h3>
+                            </div>
+                        </button>
                     </div>
                     <div class="desserts">
                         <h3>DESSERTS</h3>
                         <hr />
-                        <button class="desserts_element"></button>
-                        <button class="desserts_element"></button>
-                        <button class="desserts_element"></button>
+                        <button class="desserts_element">
+                            <div class="titre_element">
+                                <h2>Paris-Brest</h2>
+                                <h3>Revisité</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>18€</h3>
+                            </div>
+
+
+                        </button>
+                        <button class="desserts_element">
+                            <div class="titre_element">
+                                <h2>  Macaron au chocolat d'exception </h2>
+                                <h3>Et glace à la vanille de Madagascar</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>22€</h3>
+                            </div>
+                        </button>
+                        <button class="desserts_element">
+                            <div class="titre_element">
+                                <h2>Mousse au chocolat</h2>
+                                <h3>Au piment d'Espelette et à la truffe noire</h3>
+                            </div>
+                            <div class="prix_element">
+                                <h3>23€</h3>
+                            </div>
+                        </button>
                     </div>
                 </div>
             </div>
