--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -64,7 +64,7 @@
                     <div class="entrees">
                         <h3>ENTRÉES</h3>
                         <hr />
-                        <button class="entree_element">
+                        <button class="entree_element element_1">
                             <div class="titre_element">
                                 <h2>Fricassée d'escargot</h2>
                                 <h3>Au piment d'espelette</h3>
@@ -75,7 +75,7 @@
 
 
                         </button>
-                        <button class="entree_element">
+                        <button class="entree_element element_2">
                             <div class="titre_element">
                                 <h2>fois gras de canard mi-cuit</h2>
                                 <h3>et ses copeaux de truffe noire</h3>
@@ -84,7 +84,7 @@
                                 <h3>35€</h3>
                             </div>
                         </button>
-                        <button class="entree_element">
+                        <button class="entree_element element_3">
                             <div class="titre_element">
                                 <h2>Oeuf au plat</h2>
                                 <h3>Assaisonné à la truffe sur lit de caviar</h3>
@@ -97,7 +97,7 @@
                     <div class="entrees">
                         <h3>PLATS</h3>
                         <hr />
-                        <button class="plats_element">
+                        <button class="plats_element  element_1">
                             <div class="titre_element">
                                 <h2>Filet de boeuf aux herbes</h2>
                                 <h3>Accompagné de sa ribambelle de légumes</h3>
@@ -108,7 +108,7 @@
 
 
                         </button>
-                        <button class="plats_element">
+                        <button class="plats_element element_2">
                             <div class="titre_element">
                                 <h2>Parmentier de queue de boeuf</h2>
                                 <h3>À la truffe noire sur sa purée de panais</h3>
@@ -117,7 +117,7 @@
                                 <h3>35€</h3>
                             </div>
                         </button>
-                        <button class="plats_element">
+                        <button class="plats_element element_3">
                             <div class="titre_element">
                                 <h2>Filet de turbot</h2>
                                 <h3>Aux agrumes</h3>
@@ -130,7 +130,7 @@
                     <div class="desserts">
                         <h3>DESSERTS</h3>
                         <hr />
-                        <button class="desserts_element">
+                        <button class="desserts_element  element_1">
                             <div class="titre_element">
                                 <h2>Paris-Brest</h2>
                                 <h3>Revisité</h3>
@@ -141,7 +141,7 @@
 
 
                         </button>
-                        <button class="desserts_element">
+                        <button class="desserts_element element_2">
                             <div class="titre_element">
                                 <h2>  Macaron au chocolat d'exception </h2>
                                 <h3>Et glace à la vanille de Madagascar</h3>
@@ -150,7 +150,7 @@
                                 <h3>22€</h3>
                             </div>
                         </button>
-                        <button class="desserts_element">
+                        <button class="desserts_element element_3">
                             <div class="titre_element">
                                 <h2>Mousse au chocolat</h2>
                                 <h3>Au piment d'Espelette et à la truffe noire</h3>
