ajout bouton commander restaurant, formattage polices, ajouts paddings/margins

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -24,7 +24,7 @@
 
 
         <div class="menu">
-            <div class="carte_resto">
+            <div class="carte_resto carte_menu">
                 <div class="titre_icone">
                     <div class="titre_lieu">
                         <a href="restaurant_1.html">
@@ -143,7 +143,7 @@
                         </button>
                         <button class="desserts_element element_2">
                             <div class="titre_element">
-                                <h2>  Macaron au chocolat d'exception </h2>
+                                <h2> Macaron au chocolat d'exception </h2>
                                 <h3>Et glace à la vanille de Madagascar</h3>
                             </div>
                             <div class="prix_element">
@@ -160,6 +160,11 @@
                             </div>
                         </button>
                     </div>
+                </div>
+                <div id="button_explore" class="button_commander">
+                    <button>
+                        <a href="#">Commander</a>
+                    </button>
                 </div>
             </div>
         </div>
