ajout correction color margin, ajout id et class pour titres menus

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -25,10 +25,10 @@
 
         <div class="menu">
             <div class="carte_resto carte_menu">
-                <div class="titre_icone">
+                <div class="titre_icone main_titre_menu">
                     <div class="titre_lieu">
                         <a href="restaurant_1.html">
-                            <h2 class="titre resto_menu">La palette du goût</h2>
+                            <h2 class="titre" id="main_titre_menu">La palette du goût</h2>
                         </a>
                     </div>
 
