correction classe entrees

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -90,7 +90,7 @@
                             </div>
                         </button>
                     </div>
-                    <div class="entrees">
+                    <div class="plats">
                         <h3>PLATS</h3>
                         <hr />
                         <button class="plats_element  element_1">
