ajout bouton glissant

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -68,6 +68,7 @@
                             <div class="prix_element">
                                 <h3>25€</h3>
                             </div>
+                            <div class="green"></div>
 
 
                         </button>
