réglage longeur green

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -80,6 +80,7 @@
                             <div class="prix_element">
                                 <h3>35€</h3>
                             </div>
+                            <div class="green"></div>
                         </button>
                         <button class="entree_element element_3">
                             <div class="titre_element">
@@ -89,6 +90,7 @@
                             <div class="prix_element">
                                 <h3>20€</h3>
                             </div>
+                            <div class="green"></div>
                         </button>
                     </div>
                     <div class="plats">
@@ -102,6 +104,7 @@
                             <div class="prix_element">
                                 <h3>40€</h3>
                             </div>
+                            <div class="green"></div>
 
 
                         </button>
@@ -113,6 +116,7 @@
                             <div class="prix_element">
                                 <h3>35€</h3>
                             </div>
+                            <div class="green"></div>
                         </button>
                         <button class="plats_element element_3">
                             <div class="titre_element">
@@ -122,6 +126,7 @@
                             <div class="prix_element">
                                 <h3>44€</h3>
                             </div>
+                            <div class="green"></div>
                         </button>
                     </div>
                     <div class="desserts">
@@ -135,6 +140,7 @@
                             <div class="prix_element">
                                 <h3>18€</h3>
                             </div>
+                            <div class="green"></div>
 
 
                         </button>
@@ -146,6 +152,7 @@
                             <div class="prix_element">
                                 <h3>22€</h3>
                             </div>
+                            <div class="green"></div>
                         </button>
                         <button class="desserts_element element_3">
                             <div class="titre_element">
@@ -155,6 +162,7 @@
                             <div class="prix_element">
                                 <h3>23€</h3>
                             </div>
+                            <div class="green"></div>
                         </button>
                     </div>
                 </div>
