fix temps partagé animation

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -68,7 +68,9 @@
                             <div class="prix_element">
                                 <h3>25€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                               <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                            </div>
 
 
                         </button>
@@ -80,7 +82,9 @@
                             <div class="prix_element">
                                 <h3>35€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                             </div>
                         </button>
                         <button class="entree_element element_3">
                             <div class="titre_element">
@@ -90,7 +94,9 @@
                             <div class="prix_element">
                                 <h3>20€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                               <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                            </div>
                         </button>
                     </div>
                     <div class="plats">
@@ -104,7 +110,9 @@
                             <div class="prix_element">
                                 <h3>40€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                               <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                            </div>
 
 
                         </button>
@@ -116,7 +124,9 @@
                             <div class="prix_element">
                                 <h3>35€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                               <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                            </div>
                         </button>
                         <button class="plats_element element_3">
                             <div class="titre_element">
@@ -126,7 +136,9 @@
                             <div class="prix_element">
                                 <h3>44€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                               <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                            </div>
                         </button>
                     </div>
                     <div class="desserts">
@@ -140,7 +152,9 @@
                             <div class="prix_element">
                                 <h3>18€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                               <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                            </div>
 
 
                         </button>
@@ -152,7 +166,9 @@
                             <div class="prix_element">
                                 <h3>22€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                               <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                            </div>
                         </button>
                         <button class="desserts_element element_3">
                             <div class="titre_element">
@@ -162,7 +178,9 @@
                             <div class="prix_element">
                                 <h3>23€</h3>
                             </div>
-                            <div class="green"></div>
+                            <div class="green">
+                               <img class="logo_check" src="logo/check-circle-solid.svg" alt="check"> 
+                            </div>
                         </button>
                     </div>
                 </div>
